# python-victordb

./: .gitignore  LICENSE  README.md  pyproject.toml
victordb/: __init__.py  victor.py
