[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "victordb"
version = "0.1.5"
description = "VictorDB is a Python client and ORM for high-performance vector and key-value databases. It provides a simple, flexible API for vector search, key-value storage, and object modeling, making it easy to build modern AI and data applications."
authors = [
  { name = "Emiliano Billi", email = "emiliano.billi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cbor2",
    "snowflake-id"
]
license = "MIT"
keywords = ["vector database", "key-value", "orm", "python", "database", "VictorDB"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
# Añadir sección para especificar el paquete

[tool.setuptools]
packages = ["victordb"]
